  transforms (Hu, Fomel, Demanet, and Ying)
* jsg/orthorhombic: Modeling of pseudo-acoustic P-waves in
  orthorhombic media with a lowrank approximation (Song and
  Alkhalifah)

To SCons:

* Upgraded to scons-2.3.0

To documentation:

* Selfdocs include links for programs of the month

To APIs:

* Added m8r function for running Madagscar programs from MATLAB

To the Python package:

* Added an ability to have list arguments in configure
* Added MKL support in configure
* Added selfdocs for placeholders in bldutil
* Extended parallel split for sfomp and sfmpi

To programs:

* Added scalebar= option for sfgraph with depth=
* Added an ability to specify options for sfpen with SFPENOPTS
* Added opt= parameter in sfspectra
* sfpad2nextfastsize: wrapper for kiss_fft_next_fast_size so it can be
  called from scripts and SConstruct files. Python wrapper for it:
  rsf.user.sf.pad2nextfastsize()
* Added forcebw= and force_raster options for pspen
* Added snap= option for sffftwave2
* Added frame numbers for movies made with sfgraph
* Included lbfgs in user/sparse
* user/fangg: new contributor (Gang Fang)
* Added an ability to specify a colortable in a CSV file
* user/luke: new contributor (Luke Decker)
* Moved some programs from user/fomels to user/pwd
* sfzoom: example Tkinter script for interactive zooming
* sfsegyheader can take tfile= parameter for input trace headers
* Extended join= option in sfomp and sfmpi to support adding (join=0)
* user/seisinv: new contributor (Yujin Liu)
* RVL package from Bill Symes and The Rice Inversion Project
* iwave++ package from Bill Symes and The Rice Inversion Project
* Moved iwave, rvl, and iwav++ to trip

===Bug fixes===

In the reproducible documents collection:

In documentation:

* Fixed nb= parameter in sfawefd2d and sfawefd3d

In APIs:

* Fixed from_either bug in F90 API

In the Python package:

In programs:

* Fixed bug with handling zero values in sfclip
* Fixed incorrect data size bug in sffindmo
* Fixed true colors in gdpen